# Mercury

./: README.md  pyproject.toml
docs/: architecture.md  contracts.md  cookbook.md  future-work.md  memory-and-workspace.md  runtime-model.md
examples/: research_write.py
examples/cookbook/: README.md
examples/cookbook/nlp2sql/: flow.py  helpers.py
examples/cookbook/rag/: flow.py  helpers.py
examples/cookbook/shared/: convex_http.py
mercury/: __init__.py  adapter.py  cli.py  hooks.py  parse.py  planner.py  registry.py  runtime.py  schemas.py  state.py  types.py
mercury_adapters/: __init__.py  hitl.py  planners.py  sandboxes.py  schedulers.py
mercury_cli/: __init__.py  cli.py
