[project]
name = "mercury"
version = "0.2.0"
description = "Minimal DAG agent runtime with adapter-driven orchestration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-ai>=0.0.33",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
mercury = "mercury_cli.cli:entrypoint"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mercury", "mercury_cli", "mercury_adapters"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
